--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/*
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -15,13 +16,32 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+*/
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  color: white;
+}
+
+@layer base {
+  body {
+    @apply text-base;
+  }
+  h1 {
+    @apply text-[2.75em] leading-[3.5em] text-GreyPrimary font-roboto font-bold;
+  }
+  h2 {
+    @apply text-[1.875em] leading-[2.5em] text-GreyPrimary font-roboto font-bold;
+  }
+  h3 {
+    @apply text-[1.375em] leading-[2em] text-GreyPrimary font-roboto font-bold;
+  }
+  h4 {
+    @apply text-[1em] leading-[2em] text-GreyPrimary font-roboto font-bold;
+  }
+  h5 {
+    @apply text-[1em] leading-[1.5em] text-GreyPrimary font-roboto font-bold;
+  }
+  p {
+    @apply text-[1em] leading-[1.5em] text-GreyPrimary font-roboto;
+  }
 }
